--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 plugins {
     id 'com.android.application' version '7.2.0-alpha06' apply false
     id 'com.android.library' version '7.2.0-alpha06' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jmailen.kotlinter' version "3.3.0" apply true
+
 }
 
 task clean(type: Delete) {
