--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
+
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
 }
 plugins {
     id 'com.android.application' version '7.2.0-alpha06' apply false
