--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ buildscript {
     }
 }
 plugins {
-    id 'com.android.application' version '7.2.0-alpha06' apply false
-    id 'com.android.library' version '7.2.0-alpha06' apply false
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jmailen.kotlinter' version "3.3.0" apply true
 }
