--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     }
 
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.3.0-rc01'
+        compose_version_compiler = '1.3.2'
         composeCompiler = '1.1.0-rc02'
         hilt_version = '2.40.5'
         voyager_version = '1.0.0-rc02'
@@ -16,8 +17,8 @@ buildscript {
 
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
-        classpath 'org.jetbrains.compose:compose-gradle-plugin:1.0.1-rc2'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+        classpath 'org.jetbrains.compose:compose-gradle-plugin:1.2.0-rc01'
     }
 }
 plugins {
