--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ junit = "4.13.2"
 androidX-test-junit = "1.1.3"
 androidX-test-espresso = "3.4.0"
 
+agp = "7.2.2"
+kotlin = "1.6.10"
+
 [libraries]
 # Compiler
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
@@ -67,3 +70,9 @@ firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
 
 # Google
 google-playservices-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "google-auth" }
+
+[plugins]
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-linter = { id = "org.jmailen.kotlinter", version = "3.3.0" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
