--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,33 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kotlin.caching.enabled=true
+kotlin.incremental=true
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Removes build config code generation from all modules
+# Enable per module when needed with android { buildFeatures { buildConfig = true } }
+# This reduces build time due to skipping task & avoids adding Java to Kotlin only modules
+android.defaults.buildfeatures.buildconfig=false
+
+# Removes uneccessary default build features
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
+
+# https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching=true
+
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+org.gradle.parallel=true
+
+# Configure only necessary projects, useful with multimodule projects
+org.gradle.configureondemand=true
+
+org.gradle.vsf.watch = true
