--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 compose-core = "1.3.0-rc01"
 compose-versionCompiler = "1.3.2"
-compose-compiler = "1.1.0-rc02"
+compose-compiler = "1.2.0-rc02"
 compose-activity = "1.6.0"
 hilt = "2.40.5"
 voyager = "1.0.0-rc02"
@@ -16,8 +16,8 @@ junit = "4.13.2"
 androidX-test-junit = "1.1.3"
 androidX-test-espresso = "3.4.0"
 
-agp = "7.2.2"
-kotlin = "1.6.10"
+agp = "7.3.1"
+kotlin = "1.6.21"
 
 [libraries]
 # Compiler
@@ -72,7 +72,7 @@ firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
 google-playservices-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "google-auth" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-android-library = { id = "com.android.library", version.ref = "agp" }
+android-application = { id = "com.android.application", version = "7.3.1" }
+android-library = { id = "com.android.library", version = "7.3.1" }
 kotlin-linter = { id = "org.jmailen.kotlinter", version = "3.3.0" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
